--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,11 @@ FIND_PACKAGE(Torch REQUIRED)
 FIND_PACKAGE(CUDA 5.5 REQUIRED)
 FIND_PACKAGE(MAGMA)
 
-SET(CMAKE_C_FLAGS "-std=c99 -Werror=implicit-function-declaration")
+IF (NOT MSVC)
+    SET(CMAKE_C_FLAGS "-std=c99 -Werror=implicit-function-declaration")
+ELSE()
+    SET(CMAKE_C_FLAGS "-std=c99")
+ENDIF(NOT MSVC)
 
 INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})
 
